Refactor/compiler (#25)
* reduce memory and other breaking changes to compiling

* Decompiled class inside definition

* decouple reference and definition

* fix cursor offset index out of bounds

* readme for diagnostics updated

---------

Co-authored-by: Delice0 <59118341+Delice0@users.noreply.github.com>